# autonomous

./: .gitignore  package-lock.json
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: client.py  config.py  main.py
backend/app/core/: llm_client.py  llm_client_auto.py
backend/app/mcp/: combined_server.py
backend/app/models/: schemas.py
backend/app/personas/: agent_personas.py
backend/app/services/: rag_tools.py
backend/app/workflows/: autonomous_agent.py
frontend/: package-lock.json  package.json
frontend/src/app/: enhanced-workflow-diagram.tsx  page.tsx
frontend/src/types/: index.ts
